# Intent_Eval

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
app/: pipeline.py  streamlit_app.py
docs/: ARCHITECTURE.md  CALIBRATION_SESSION.md  DEPLOYMENT_PILOT.md  EVAL.md  HANDOVER.md  IMPROVEMENT_V2_TASKMASTER.md  IMPROVEMENT_VERSION_TASKMASTER.md  MARK_TESTING_GUIDE.md  PARSING_TASKMASTER.md  PRD.md  REQUESTS_FOR_MARK.md  TASKMASTER.md  gold_example_simplification.md  parsing_notes.md
eval/: checklist.yaml  consultant_scores_template.csv
fixtures/: gold_simplification_scorecard.json  synthetic_5map_parsed.json  synthetic_higher_intent.json
nextjs-app/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
prompts/: manifest.yaml
reference/: manifest.yaml
rubrics/: weighted_rubric_v2025_12_01.json
schemas/: evaluation_report.json  llm_dimension_response.json
scripts/: build_reference_manifest.py  compare_runs.py  export_report_schema.py  extract_docx.py  run_client_map.py  run_client_map_run2.py  spike_docling_pptx.py
tests/: test_calculator.py  test_cli_score.py  test_config.py  test_evidence_validator.py  test_parsing.py  test_phase2_t2_t3.py  test_phase2_t4_t5.py  test_phase3_t1_t2.py  test_phase3_t3.py  test_phase3_t4.py  test_phase3_t6.py  test_phase4_t1.py  test_phase4_t2.py  test_phase4_t3.py  test_phase4_t4_t5.py  test_phase5_t1_t2.py  test_phase5_t3_t4.py  test_phase5_t5_t6.py  test_phase6_t1_t2.py  test_phase6_t3.py  test_phase6_t4_t5.py  test_phase6_t6_t7.py  test_phase6a_t1.py  test_phase6a_t2.py  (+3 more)
(+76 files in other folders)
